--- a/SitBackFurniture_Ex1/index.html
+++ b/SitBackFurniture_Ex1/index.html
@@ -1,12 +1,14 @@
 <html>
 
 <head>
-      <title></title>
+      <title>SITBACK FURNITURE</title>
 </head>
 
-<body>
+  <body>
+              <!--Start of Header -->
     <h1 align="center">SITBACK FURNITURE</h1>
-    <table width="100%" height="70px" align="center" bgcolor="grey">
+              <!--End of Header -->
+    <table width="100%" height="70px" align="center" bgcolor="grey" >
         <tr>
             <td>
                 <table align="center" cellpadding="10" cellspacing="0" width="22%">
@@ -21,13 +23,16 @@
     </table>
     <h1 align="center">Your Home, With Love </h1>
     <h2 align="center">Choose from a zillion collections</h2>
+                      <!--Start of Table Images -->
     <table cellpadding="14" align="center" width="85%">
       <tr>
-        <td > <img  width="100%" src="images/couches.png" alt="Couches"></td>
-        <td><img   width="100%" src="images/chairs.png" alt="chairs"></td>
-        <td><img   width="100%" src="images/dining.png" alt="Dining"></td>
+        <td > <img  width="100%" src="Asserts/couches.png" alt="Couches"/></td>
+        <td><img   width="100%" src="Asserts/chairs.png" alt="chairs"/></td>
+        <td><img   width="100%" src="Asserts/dining.png" alt="Dining"/></td>
       </tr>
     </table>
+                       <!--End of Table Images -->
+                         <!--Start of Paragraph -->
     <h1 align="center">Our Products Our Pride</h1>
     <table align="center" width="40%">
         <tr>
@@ -43,31 +48,35 @@
             </td>
         </tr>
     </table>
-    <p align="center"><a href="www.google.com">Take me to Google</a></p>
+                        <!--End of Paragraph -->
+    <p align="center"><a href="https://www.google.com" target="_blank" >Take me to Google</a></p>
+                         <!--Start of Option -->
     <h1 align="center">contact Us </h1>
     <table align="center" cellspacing="10">
         <tr>
-            <td><input type="text" placeholder="Your Name" size="30"</td>
+            <td><input type="text" placeholder="Your Name" size="30"/></td>
         </tr>
         <tr>
-            <td><input type="text" placeholder="Contact Number" size="30""</td>
+            <td><input type="number" placeholder="Contact Number" size="30"/></td>
         </tr>
         <tr>
-            <td><input type="text" placeholder="Email Address" size="30"</td>
+            <td><input type="email" placeholder="Email Address" size="30"/></td>
         </tr>
         <tr>
-            <td><input type="text" placeholder="Year of birth" size="30"</td>
+            <td><input type="date" placeholder="Year of birth" size="30"/></td>
         </tr>
         <tr>
             <td ><select name="State" id="State">
-                <option>Select state      </option>
+                <option value="" disabled selected hidden>Select State </option>
                 <option value="TamilNadu" size="30">TamilNadu</option>
                 <option value="Kerala" size="30">Kerala</option>
                 <option value="Karnataka"size="30">Karnataka</option>
                 <option value="Andra"size="30">Andra</option>
-              </select></td>
+              </select>
+            </td>
         </tr>
     </table>
-</body>
+                        <!--End of Option -->
+  </body>
 
 </html>
