--- a/Exercise 4/index.html
+++ b/Exercise 4/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="CSS/Style.css">
+    <link rel="stylesheet" href="CSS/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
 
