--- a/Exercise 6/index1.html
+++ b/Exercise 6/index1.html
@@ -2,194 +2,147 @@
 
 <head>
     <title>Fashion</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="CSS/index.css">
 </head>
-<link rel="stylesheet" href="CSS/index.css">
+
 <body>
-                    <!-- start of logo -->
+    <!-- start of logo -->
     <div class="logo">
         <img class="logoimage" src="Asserts/logo.png" />
     </div>
-                    <!-- End of logo -->
+    <!-- End of logo -->
     <div>
         <ul>
             <li>
-                  <!-- Start of icon layer-->
+                <!-- Start of icon layer-->
                 <div class="iconlayers">
-                      <!-- Start of icon -->
                     <div class="icon"></div>
-                      <!-- End of icon -->
-                <!-- start of list -->
-                <div class="menu">
-                    <ul>
-                        <li><a href="#">My Account</a></li>
-                        <li><a href="#">My Order</a></li>
-                        <li><a href="#">My Whishlist</a></li>
-                        <li><a href="#">Logout</a></li>
-                    </ul>
+                    <div class="menu">
+                        <ul>
+                            <li><a href="#">My Account</a></li>
+                            <li><a href="#">My Order</a></li>
+                            <li><a href="#">My Whishlist</a></li>
+                            <li><a href="#">Logout</a></li>
+                        </ul>
+                    </div>
                 </div>
-                  <!-- End of list -->
-            </div>
-                <!-- End of icon -->
+                <!-- End of icon layer-->
             </li>
         </ul>
     </div>
-    <!-- End of icon -->
-    <!-- stat of middle block -->
+    <!-- stat of product -->
     <div class="Products">
-          <!-- Start of inside block -->
+        <!-- Start of Product Info-->
         <div class="ProductInfo">
-            <!-- Start of inner block -->
             <div class="innerBlock">
-                <!-- Start of star-->
                 <span class="star">&star;</span>
-                <!-- End of star -->
-                <!-- Start of image  -->
                 <img class="image" src="Asserts/shirt.png" />
-                <!-- End of image -->
-            </div>
-            <div class="circle"> S</div>
-            <p class="ItemName">Bath Wardrobe</p>
-           <p class="Price"> <span>&#8377;</span> 850</p>
-            <button class="cart">Add to cart</button>
-             <!-- End of inner block -->
-        </div>
-         <!-- End of inside block -->
-          <!-- Start of inside block -->
-        <div class="ProductInfo1">
-             <!-- Start of inner block -->
-            <div class="innerBlock">
-                <span class="star">&star;</span>
-                  <!-- End of star -->
-                <!-- Start of image  -->
-                <img class="image" src="Asserts/jacket.png" />
-                <!-- End of image -->
-            </div>
-            <div class="circle"> M</div>
-            <p class="ItemName">Winter Jacket</p>
-            <p class="Price"> <span>&#8377;</span> 2399</p>
-            <button class="cart">Add to cart</button>
-             <!-- End of inner block -->
-        </div>
-        <!-- End of inside block -->
-         <!-- Start of inside block -->
-        <div class="ProductInfo1">
-             <!-- Start of inner block -->
-            <div class="innerBlock">
-                <!-- Start of star -->
-                <span class="star">&star;</span>
-                  <!-- End of star -->
-                <!-- Start of image  -->
-                <img class="image" src="Asserts/tshirt.png" />
-                <!-- End of image -->
-            </div>
-            <div class="circle"> S</div>
-            <p class="ItemName">Red Round Neck</p>
-            <p class="Price"> <span>&#8377;</span> 350</p>
-            <button class="cart">Add to cart</button>
-             <!-- End of inner block -->
-        </div>
-        <!-- End of inside block -->
-         <!-- Start of inside block -->
-        <div class="ProductInfo1">
-             <!-- Start of inner block -->
-            <div class="innerBlock">
-                 <!-- Start of star -->
-                <span class="star">&star;</span>
-                  <!-- End of star -->
-                <!-- Start of image  -->
-                <img class="image" src="Asserts/sweatshirt.png" />
-                <!-- End of image -->
-            </div>
-            <div class="circle"> S</div>
-            <p class="ItemName">Sweat Shirt</p>
-            <p class="Price"> <span>&#8377;</span> 1350</p>
-            <button class="cart">Add to cart</button>
-             <!-- End of inner block -->
-        </div>
-        <!-- End of inside block -->
-         <!-- Start of inside block -->
-        <div class="ProductInfo">
-             <!-- Start of inner block -->
-            <div class="innerBlock">
-                <!-- Start of star -->
-                <span class="star">&star;</span>
-                  <!-- End of star -->
-                <!-- Start of image  -->
-                <img class="image" src="Asserts/shirt.png" />
-                <!-- End of image -->
             </div>
             <div class="circle"> S</div>
             <p class="ItemName">Bath Wardrobe</p>
             <p class="Price"> <span>&#8377;</span> 850</p>
             <button class="cart">Add to cart</button>
-             <!-- End of inner block -->
         </div>
-        <!-- End of inside block -->
-         <!-- Start of inside block -->
+        <!-- End of Product Info-->
+        <!-- Start of Product Info-->
         <div class="ProductInfo1">
-             <!-- Start of inner block -->
             <div class="innerBlock">
-                <!-- Start of star -->
                 <span class="star">&star;</span>
-                  <!-- End of star -->
-                <!-- Start of image  -->
                 <img class="image" src="Asserts/jacket.png" />
-                <!-- End of image -->
             </div>
-            <div class="circle">M</div>
+            <div class="circle"> M</div>
             <p class="ItemName">Winter Jacket</p>
             <p class="Price"> <span>&#8377;</span> 2399</p>
             <button class="cart">Add to cart</button>
-             <!-- End of inner block -->
         </div>
-        <!-- End of inside block -->
-         <!-- Start of inside block -->
+        <!-- End of Product Info-->
+        <!-- Start of Product Info-->
         <div class="ProductInfo1">
-             <!-- Start of inner block -->
             <div class="innerBlock">
-                <!-- Start of star -->
                 <span class="star">&star;</span>
-                  <!-- End of star -->
-                <!-- Start of image  -->
                 <img class="image" src="Asserts/tshirt.png" />
-                <!-- End of image -->
             </div>
             <div class="circle"> S</div>
             <p class="ItemName">Red Round Neck</p>
             <p class="Price"> <span>&#8377;</span> 350</p>
             <button class="cart">Add to cart</button>
-             <!-- End of inner block -->
         </div>
-        <!-- End of inside block -->
-         <!-- Start of inside block -->
+        <!-- End of Product Info-->
+        <!-- Start of Product Info-->
         <div class="ProductInfo1">
-             <!-- Start of inner block -->
             <div class="innerBlock">
-                 <!-- Start of star -->
                 <span class="star">&star;</span>
-                  <!-- End of star -->
-                <!-- Start of image  -->
                 <img class="image" src="Asserts/sweatshirt.png" />
-                <!-- End of image -->
             </div>
             <div class="circle"> S</div>
             <p class="ItemName">Sweat Shirt</p>
             <p class="Price"> <span>&#8377;</span> 1350</p>
             <button class="cart">Add to cart</button>
-             <!-- End of inner block -->
         </div>
-         <!-- End of inside block -->
+        <!-- End of Product Info-->
+        <!-- Start of Product Info-->
+        <div class="ProductInfo">
+            <div class="innerBlock">
+                <span class="star">&star;</span>
+                <img class="image" src="Asserts/shirt.png" />
+            </div>
+            <div class="circle"> S</div>
+            <p class="ItemName">Bath Wardrobe</p>
+            <p class="Price"> <span>&#8377;</span> 850</p>
+            <button class="cart">Add to cart</button>
+        </div>
+        <!-- End of Product Info-->
+        <!-- Start of Product Info-->
+        <div class="ProductInfo1">
+            <div class="innerBlock">
+                <span class="star">&star;</span>
+                <img class="image" src="Asserts/jacket.png" />
+            </div>
+            <div class="circle">M</div>
+            <p class="ItemName">Winter Jacket</p>
+            <p class="Price"> <span>&#8377;</span> 2399</p>
+            <button class="cart">Add to cart</button>
+        </div>
+        <!-- End of Product Info-->
+        <!-- Start of Product Info-->
+        <div class="ProductInfo1">
+            <div class="innerBlock">
+                <span class="star">&star;</span>
+                <img class="image" src="Asserts/tshirt.png" />
+            </div>
+            <div class="circle"> S</div>
+            <p class="ItemName">Red Round Neck</p>
+            <p class="Price"> <span>&#8377;</span> 350</p>
+            <button class="cart">Add to cart</button>
+        </div>
+        <!-- End of Product Info-->
+        <!-- Start of Product Info-->
+        <div class="ProductInfo1">
+            <div class="innerBlock">
+                <span class="star">&star;</span>
+                <img class="image" src="Asserts/sweatshirt.png" />
+            </div>
+            <div class="circle"> S</div>
+            <p class="ItemName">Sweat Shirt</p>
+            <p class="Price"> <span>&#8377;</span> 1350</p>
+            <button class="cart">Add to cart</button>
+        </div>
+        <!-- End of Product Info-->
     </div>
-      <!-- End of Middle block -->
+    <!-- End of product -->
     <div>
+        <!-- Start of footer-->
         <footer class="Fashion-Footer">
             <ul class="fotter-content">
                 <li class="lists">Jackets</li>
-                 <li class="lists">Shirts</li>
+                <li class="lists">Shirts</li>
                 <li class="lists">Trousers</li>
                 <li class="lists">Pants</li>
                 <li class="lists">Shoes</li>
         </footer>
+        <!-- End of footer-->
     </div>
 </body>
 
