--- a/EnchantingTamilnadu_2/Index.html
+++ b/EnchantingTamilnadu_2/Index.html
@@ -3,7 +3,7 @@
 
 <head>
     </style>
-<link rel="stylesheet" href="CSS/Style.css">
+<link rel="stylesheet" href="CSS/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -16,7 +16,7 @@
     <div>
         <div>
             <header>
-                <h1 class="header1">ENCHANTING TAMIL NADU</h1>
+                <h1 class="Enchantingheader">ENCHANTING TAMIL NADU</h1>
             </header>
         </div>
         <div>
@@ -127,11 +127,11 @@
     </div>
     <!-- End of the Paragraph -->
     <!-- Start of the Fotter -->
-    <div class="footer1">
-        <fotter>
+    <div class="Enchantingfooter">
+        <footer>
             <h1 id="copyright">COPYRIGHTS 2020</h1>
             <P id="photosource">All Photos From Dribble Collection</P>
-        </fotter>
+        </footer>
     </div>
     <!-- End of the Fotter -->
 </body>
