--- a/Exercise 8/index.html
+++ b/Exercise 8/index.html
@@ -2,61 +2,70 @@
 
 <head>
     <title>
-
+        Hat
     </title>
-    <link rel="stylesheet" href="CSS/index.css"/>
+    <link rel="stylesheet" href="CSS/index.css" />
     <link
-    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200&family=Oswald&family=Roboto:wght@100;300;400;500;700;900&display=swap"
-    rel="stylesheet">
+        href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200&family=Oswald&family=Roboto:wght@100;300;400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
         integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-    
 </head>
 
 <body>
-    <div class=".backgroundImage">
-       <img src="Asserts/background-image.png"/>
-    </div>
-    <div>
-        <p class="heading1"> FANCY HATS</p>
-    </div>
-    <div>
-        <p class="yearStarted"> SINCE <span class="year">1867</span></p>
-    </div>
-    <div class="sideBar">
-        <div class="sideBarsymbol">
-            <i class="fa-solid fa-bars"></i>
+    <!-- Start of Header -->
+    <header>
+        <div class="background-image">
+            <img src="Assest/background-image.png" />
         </div>
-    </div>
-    <div class="sideBarContent">
-
-        <img class="HatLogo" src="Asserts/hat-icon.svg" />
-        <div class="content">
-            <li>COWBOY HATS</li>
-            <li>DAD HATS</li>
-            <li>FEDORAS</li>
-            <li>TRIBAL HATS</li>
-            <li>FLAT CAPS</li>
-            <li>DERBY HATS</li>
-            <li>ARMY CAPS</li>
-            <li>CLOCHE HATS</li>
-            <li>BEANIES</li>
-            <li>TRAPPER HATS</li>
-            <li>SNAPBACKS</li>
-            <li>TRUCKER HATS</li>
-            <li>VISORS</li>
+        <div>
+            <p class="heading"> FANCY HATS</p>
         </div>
-    </div>
+    </header>
+    <!-- End of Header -->
+    <!-- Start of section -->
+    <section>
+        <div>
+            <p class="start-year"> SINCE <span class="year">1867</span></p>
+        </div>
+        <div class="sidebar">
+            <div class="sidebar-symbol">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+        </div>
+        <div class="sidebar-content">
 
-    <div>
-        <p class="message">HATS FOR A </br><span style="font-size: 140px;font-weight: 600;">LIFETIME</span></p>
-    </div>
-    <div class="icon">
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-facebook"></i>
-    </div>
+            <img class="hat-logo" src="./Assest/hat-icon.svg" />
+            <div class="content">
+                <li>COWBOY HATS</li>
+                <li>DAD HATS</li>
+                <li>FEDORAS</li>
+                <li>TRIBAL HATS</li>
+                <li>FLAT CAPS</li>
+                <li>DERBY HATS</li>
+                <li>ARMY CAPS</li>
+                <li>CLOCHE HATS</li>
+                <li>BEANIES</li>
+                <li>TRAPPER HATS</li>
+                <li>SNAPBACKS</li>
+                <li>TRUCKER HATS</li>
+                <li>VISORS</li>
+            </div>
+        </div>
+        <div>
+            <p class="message">HATS FOR A </br><span class="message-content">LIFETIME</span></p>
+        </div>
+    </section>
+    <!-- End of section -->
+    <!-- Start of footer -->
+    <footer>
+        <div class="icon">
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-facebook"></i>
+        </div>
+    </footer>
+    <!-- Start of footer -->
 </body>
 
 </html>
