--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- End of header -->
     <!-- start of form container -->
     <section>
-        <form>
+        <form id="form">
             <div class="form-container">
                 <div class="form-header"><strong> BILLING DETAILS </strong></div>
                 <div class="name">
